--- a/Fiap2025.Entrega3.Producer/appsettings.json
+++ b/Fiap2025.Entrega3.Producer/appsettings.json
@@ -10,5 +10,8 @@
     "HostName": "localhost",
     "UserName": "guest",
     "Password": "guest"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:bdcadastro.database.windows.net,1433;Initial Catalog=bdcadastro;Persist Security Info=False;User ID=wagner;Password=Wawawa@301080;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
