--- a/Fiap2025.Entrega3.Producer/appsettings.Development.json
+++ b/Fiap2025.Entrega3.Producer/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "RabbitMQ": {
-    "HostName": "localhost",
+    "HostName": "20.242.177.148",
     "UserName": "guest",
     "Password": "guest"
   },
