--- a/Fiap2025.Entrega3.ConsumerUpdate/appsettings.json
+++ b/Fiap2025.Entrega3.ConsumerUpdate/appsettings.json
@@ -9,7 +9,7 @@
     "DefaultConnection": "Server=tcp:bdcadastro.database.windows.net,1433;Initial Catalog=bdcadastro;Persist Security Info=False;User ID=wagner;Password=Wawawa@301080;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "RabbitMQ": {
-    "HostName": "localhost",
+    "HostName": "20.242.177.148",
     "UserName": "guest",
     "Password": "guest"
   }
