Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/master_fiap2025consumerupdate.yml
+++ b/.github/workflows/master_fiap2025consumerupdate.yml
@@ -41,13 +41,23 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
+    permissions:
+      id-token: write #This is required for requesting the JWT
+      contents: read #This is required for actions/checkout
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: .net-app
       
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_6F53E41BECB345919C29E130EDC425A9 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_A3E6C9610B8C49F1A156382880858837 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_ABE383168019463DABC272398E0911DF }}
+
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
@@ -55,4 +65,4 @@ jobs:
           app-name: 'Fiap2025ConsumerUpdate'
           slot-name: 'Production'
           package: .
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_406EC2B473B74289B4417254554C160E }}
+          
