--- a/.github/workflows/master_fiap2025consumerupdate.yml
+++ b/.github/workflows/master_fiap2025consumerupdate.yml
@@ -1,68 +1,42 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy ASP.Net Core app to Azure Web App - Fiap2025ConsumerUpdate
+name: Deploy APIs to Azure
 
 on:
   push:
     branches:
-      - master
-  workflow_dispatch:
+      - main
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read #This is required for actions/checkout
+
+    strategy:
+      matrix:
+        app-name: [consumerupdate]
+        app-path: [Fiap2025.Entrega3.ConsumerUpdate]
+        azure-webapp-name: "${{ secrets.AZURE_WEBAPP_NAME_CONSUMERUPDTE }}"
+        azure-publish-profile: "${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_CONSUMERUPDATE }}"
 
     steps:
-      - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Set up .NET Core
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: '8.x'
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v2
+      with:
+        dotnet-version: '8.0.x'
 
-      - name: Build with dotnet
-        run: dotnet build --configuration Release
+    - name: Restore dependencies
+      run: dotnet restore ${{ matrix.app-path }}
 
-      - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+    - name: Build
+      run: dotnet build ${{ matrix.app-path }} --configuration Release --no-restore
 
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
-        with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+    - name: Publish
+      run: dotnet publish ${{ matrix.app-path }} --configuration Release --output ./publish --no-build
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: .net-app
-      
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_6F53E41BECB345919C29E130EDC425A9 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_A3E6C9610B8C49F1A156382880858837 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_ABE383168019463DABC272398E0911DF }}
-
-      - name: Deploy to Azure Web App
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: 'Fiap2025ConsumerUpdate'
-          slot-name: 'Production'
-          package: .
-          
+    - name: Deploy to Azure Web App
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: ${{ matrix.azure-webapp-name }}
+        publish-profile: ${{ matrix.azure-publish-profile }}
+        package: ./publish
