--- a/.github/workflows/master_fiap2025consumerdelete.yml
+++ b/.github/workflows/master_fiap2025consumerdelete.yml
@@ -1,42 +1,55 @@
-name: Deploy APIs to Azure
+name: Build and deploy ASP.Net Core app to Azure Web App - Fiap2025ConsumerDelete
 
 on:
   push:
     branches:
-      - main
+      - master
+  workflow_dispatch:
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        app-name: [consumerdelete]
-        app-path: [Fiap2025.Entrega3.ConsumerDelete]
-        azure-webapp-name: "${{ secrets.AZURE_WEBAPP_NAME_CONSUMERDELETE  }}"
-        azure-publish-profile: "${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_CONSUMERDELETE }}"
+    permissions:
+      contents: read #This is required for actions/checkout
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v2
-      with:
-        dotnet-version: '8.0.x'
+      - name: Set up .NET Core
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.x'
 
-    - name: Restore dependencies
-      run: dotnet restore ${{ matrix.app-path }}
+      - name: Build with dotnet
+        run: dotnet build --configuration Release
 
-    - name: Build
-      run: dotnet build ${{ matrix.app-path }} --configuration Release --no-restore
+      - name: dotnet publish
+        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
-    - name: Publish
-      run: dotnet publish ${{ matrix.app-path }} --configuration Release --output ./publish --no-build
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v4
+        with:
+          name: .net-app
+          path: ${{env.DOTNET_ROOT}}/myapp
 
-    - name: Deploy to Azure Web App
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: ${{ matrix.azure-webapp-name }}
-        publish-profile: ${{ matrix.azure-publish-profile }}
-        package: ./publish
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: .net-app
+      
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: 'Fiap2025ConsumerDelete'
+          slot-name: 'Production'
+          package: .
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_9C47408CC00E4A2989D0399301B93F5A }}
