--- a/.github/workflows/master_fiap2025function.yml
+++ b/.github/workflows/master_fiap2025function.yml
@@ -33,7 +33,7 @@ jobs:
         shell: bash
         run: |
           pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
-          dotnet build --configuration Release --output ./output
+          dotnet build --configuration Release
           popd
       
       - name: Login to Azure
@@ -49,5 +49,4 @@ jobs:
         with:
           app-name: 'Fiap2025Function'
           slot-name: 'Production'
-          package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/output'
-          
+          package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/bin/Release/net8.0/publish'
