--- a/.github/workflows/master_fiap2025function.yml
+++ b/.github/workflows/master_fiap2025function.yml
@@ -1,7 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy dotnet core project to Azure Function App - Fiap2025Function
+name: Fiap2025Function
 
 on:
   push:
@@ -29,11 +26,11 @@ jobs:
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
 
-      - name: 'Resolve Project Dependencies Using Dotnet'
+      - name: 'Publish Project Using Dotnet'
         shell: bash
         run: |
           pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
-          dotnet build --configuration Release
+          dotnet publish --configuration Release --output ./bin/Release/net8.0/publish
           popd
       
       - name: Login to Azure
