Revert "Ajuste connection string"
This reverts commit d053b13aa027cdd1de01910484b7f5d1a650ace5.

--- a/Fiap2025.Entrega3.AzureFunction/local.settings.json
+++ b/Fiap2025.Entrega3.AzureFunction/local.settings.json
@@ -2,7 +2,9 @@
   "IsEncrypted": false,
   "Values": {
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
-    "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
+    "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated"
+  },
+  "ConnectionStrings": {
     "DefaultConnection": "Server=tcp:bdcadastro.database.windows.net,1433;Initial Catalog=bdcadastro;Persist Security Info=False;User ID=wagner;Password=Wawawa@301080;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
