--- a/.github/workflows/master_fiap2025producer.yml
+++ b/.github/workflows/master_fiap2025producer.yml
@@ -21,16 +21,16 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build ./Fiap2025.Entrega3.Producer/Fiap2025.Entrega3.Producer.csproj --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish ./Fiap2025.Entrega3.Producer/Fiap2025.Entrega3.Producer.csproj -c Release -o ${{ runner.temp }}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: ${{ runner.temp }}/myapp
 
   deploy:
     runs-on: ubuntu-latest
@@ -51,5 +51,5 @@ jobs:
         with:
           app-name: 'Fiap2025Producer'
           slot-name: 'Production'
-          package: .
+          package: ${{ runner.temp }}/myapp
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_E0C934BBF4C24A4991136B70AC465F60 }}
