--- a/.github/workflows/master_fiap2025producer.yml
+++ b/.github/workflows/master_fiap2025producer.yml
@@ -24,13 +24,13 @@ jobs:
         run: dotnet build ./Fiap2025.Entrega3.Producer/Fiap2025.Entrega3.Producer.csproj --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish ./Fiap2025.Entrega3.Producer/Fiap2025.Entrega3.Producer.csproj -c Release -o ${{ runner.temp }}/myapp
+        run: dotnet publish ./Fiap2025.Entrega3.Producer/Fiap2025.Entrega3.Producer.csproj -c Release -o ${{ runner.workspace }}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ${{ runner.temp }}/myapp
+          path: ${{ runner.workspace }}/myapp
 
   deploy:
     runs-on: ubuntu-latest
@@ -51,5 +51,5 @@ jobs:
         with:
           app-name: 'Fiap2025Producer'
           slot-name: 'Production'
-          package: ${{ runner.temp }}/myapp
+          package: ${{ runner.workspace }}/myapp
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_E0C934BBF4C24A4991136B70AC465F60 }}
