--- a/.github/workflows/master_fiap2025producer.yml
+++ b/.github/workflows/master_fiap2025producer.yml
@@ -26,6 +26,9 @@ jobs:
       - name: dotnet publish
         run: dotnet publish ./Fiap2025.Entrega3.Producer/Fiap2025.Entrega3.Producer.csproj -c Release -o ${{ runner.workspace }}/myapp
 
+      - name: List directory contents for debugging
+        run: ls -R ${{ runner.workspace }}
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
@@ -45,6 +48,9 @@ jobs:
         with:
           name: .net-app
       
+      - name: List directory contents for debugging
+        run: ls -R ${{ runner.workspace }}
+
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
