--- a/.github/workflows/master_fiap2025producer.yml
+++ b/.github/workflows/master_fiap2025producer.yml
@@ -3,59 +3,36 @@ name: Fiap2025Producer
 on:
   push:
     branches:
-      - master
-  workflow_dispatch:
+      - main
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read #This is required for actions/checkout
 
     steps:
-      - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      - name: Set up .NET Core
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: '8.x'
+    - name: Set up .NET
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '5.0.x'
 
-      - name: Build with dotnet
-        run: dotnet build ./Fiap2025.Entrega3.Producer/Fiap2025.Entrega3.Producer.csproj --configuration Release
+    - name: Build Project
+      run: |
+        dotnet publish -c Release -o /home/runner/work/Entrega3/myapp
 
-      - name: dotnet publish
-        run: dotnet publish ./Fiap2025.Entrega3.Producer/Fiap2025.Entrega3.Producer.csproj -c Release -o ${{ runner.workspace }}/myapp
+    - name: Verify Package
+      run: |
+        if [ ! -d "/home/runner/work/Entrega3/myapp" ]; then
+          echo "Package directory does not exist."
+          exit 1
+        fi
 
-      - name: List directory contents for debugging
-        run: ls -R ${{ runner.workspace }}
-
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
-        with:
-          name: .net-app
-          path: ${{ runner.workspace }}/myapp
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: .net-app
-      
-      - name: List directory contents for debugging
-        run: ls -R ${{ runner.workspace }}
-
-      - name: Deploy to Azure Web App
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: 'Fiap2025Producer'
-          slot-name: 'Production'
-          package: ${{ runner.workspace }}/myapp
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_E0C934BBF4C24A4991136B70AC465F60 }}
+    - name: Deploy to Production
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'myapp'
+        slot-name: 'Production'
+        package: '/home/runner/work/Entrega3/myapp'
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
