--- a/.github/workflows/master_fiap2025producer.yml
+++ b/.github/workflows/master_fiap2025producer.yml
@@ -6,33 +6,41 @@ on:
       - main
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up .NET
-      uses: actions/setup-dotnet@v1
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
       with:
-        dotnet-version: '5.0.x'
+        node-version: '14'
 
-    - name: Build Project
-      run: |
-        dotnet publish -c Release -o /home/runner/work/Entrega3/myapp
+    - name: Install dependencies
+      run: npm install
 
-    - name: Verify Package
-      run: |
-        if [ ! -d "/home/runner/work/Entrega3/myapp" ]; then
-          echo "Package directory does not exist."
-          exit 1
-        fi
+    - name: Build package
+      run: npm run build
+      env:
+        CI: true
 
-    - name: Deploy to Production
+    - name: Ensure package directory exists
+      run: mkdir -p /home/runner/work/Entrega3/myapp
+
+    - name: Copy build output to package directory
+      run: cp -R build/* /home/runner/work/Entrega3/myapp/
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+    - name: Deploy to production
       uses: azure/webapps-deploy@v2
       with:
-        app-name: 'myapp'
-        slot-name: 'Production'
-        package: '/home/runner/work/Entrega3/myapp'
+        app-name: myapp
+        slot-name: Production
+        package: /home/runner/work/Entrega3/myapp
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
